--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 desc_en: "Professional monitoring of Thai gold market and FOREX rates.",
                 desc_cn: "实时监控泰国金价与汇率，内置专业的投资盈亏计算器。",
                 desc_th: "ติดตามราคาทองคำและอัตราแลกเปลี่ยน พร้อมคำนวณกำไร/ขาดทุน",
-                url: "https://thai-gold-marjfazaj6s7kkvvbqrj6g.streamlit.app/",
+                url: "https://gold.bolab.online",
                 icon: "🥇", color: "#f1c40f", bg: "#FFFDF0"
             },
             {
@@ -441,7 +441,7 @@
                 desc_en: "Advanced AI statistical model for lottery number predictions.",
                 desc_cn: "基于历史大数据的 AI 彩票预测工具，可视化分析中奖趋势。",
                 desc_th: "เครื่องมือทำนายเลขหวยด้วย AI จากสถิติย้อนหลังและวิเคราะห์แนวโน้ม",
-                url: "https://thai-lottery-predictor-pbh3eacsmrwe9n73mew8w2.streamlit.app/",
+                url: "https://lottery.bolab.online",
                 icon: "🎰", color: "#e74c3c", bg: "#FFF0F0"
             },
             {
@@ -482,7 +482,7 @@
                 desc_en: "AI-powered visa application assistant.",
                 desc_cn: "AI 驱动的签证申请助手，智能填表与材料指引。",
                 desc_th: "ผู้ช่วยอัจฉริยะในการขอวีซ่า ช่วยกรอกเอกสารและแนะนำขั้นตอน",
-                url: "https://industrial-brianne-kelvinbo-bf4f5d9a.koyeb.app/",
+                url: "https://visa.bolab.online",
                 icon: "🛂", color: "#8e44ad", bg: "#F5EEF8"
             },
             {
