--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 desc_en: "Filtered tracking and automatic notifications via LINE/Email.",
                 desc_cn: "智能佛牌监控系统，筛选特定关键词并自动推送通知。",
                 desc_th: "ระบบติดตามและแจ้งเตือนอัตโนมัติเมื่อพบพระเครื่องที่ต้องการ",
-                url: "#",
+                url: "http://34.169.181.246:8501",
                 icon: "🛡️", color: "#d35400", bg: "#FDF2E9"
             },
             {
@@ -506,7 +506,7 @@
                 desc_en: "Enterprise payment gateway middleware (Opn/GB/WeChat/Alipay).",
                 desc_cn: "企业级聚合支付中台，无缝对接全球主流支付渠道。",
                 desc_th: "ระบบรวมการชำระเงินระดับองค์กร รองรับช่องทางทั่วโลก",
-                url: "#",
+                url: "https://pp-pay-global-production.up.railway.app/",
                 icon: "🌐", color: "#2c3e50", bg: "#ECF0F1"
             }
         ];
